# next-location-prediction

./: .gitignore  pyproject.toml  requirements.txt
app/: api.py  app.py  geolife_model.py
app/backend/: geolife_api.py  geolife_model.py
mobility/: __init__.py
mobility/analyze/: __init__.py  data_quality_assessment.py  stay_points.py  trip_legs.py
mobility/evaluate/: data_quality.py
mobility/predict/: __init__.py  markov_chain.py  time_aware_markov.py
mobility/profile/: __init__.py  location_generator.py  staypoint_detector.py
mobility/simulate/: __init__.py  markov_chain.py  smotenc_ovo_trainer.py  time_aware_markov.py
mobility/spatial/: location_generator.py  staypoint_detector.py
mobility/utils/: __init__.py  data_loader.py  datatime_parser.py  helpers.py  input_generator.py  logger.py  measurements.py
mobility/utils/scalers/: __init__.py  min_max_scaler.py  standard_scaler.py
notebooks/: geo_preprocessing.ipynb
scripts/: main.py
