[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobility"
version = "0.1.0"
description = "Next Location Prediction Engine"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Shane Teel"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT Licence",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "shapely>=2.1.2",
    "geopy>=2.4.1",

    "scikit-mobility>=1.2.2",
    "scikit-learn>=1.8.0",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
    "streamlit>=1.28.0",
    "streamlit-folium>=0.26.1"
    ]

[project.urls]
Homepage = "https://github.com/ShaneTeel/next-location-prediction"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]